@@ -1,8 +1,11 @@
-package de.tum.in.www1.artemis.lecture;
+package de.tum.in.www1.artemis.competency;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.AssertionsForClassTypes.within;
 import static org.awaitility.Awaitility.await;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
 
 import java.time.ZonedDateTime;
 import java.util.Collections;
@@ -25,11 +28,6 @@ import org.springframework.security.test.context.support.WithMockUser;
 
 import de.tum.in.www1.artemis.AbstractSpringIntegrationLocalCILocalVCTest;
 import de.tum.in.www1.artemis.StudentScoreUtilService;
-import de.tum.in.www1.artemis.competency.CompetencyProgressUtilService;
-import de.tum.in.www1.artemis.competency.CompetencyUtilService;
-import de.tum.in.www1.artemis.competency.PrerequisiteUtilService;
-import de.tum.in.www1.artemis.competency.StandardizedCompetencyUtilService;
-import de.tum.in.www1.artemis.course.CourseUtilService;
 import de.tum.in.www1.artemis.domain.Course;
 import de.tum.in.www1.artemis.domain.DomainObject;
 import de.tum.in.www1.artemis.domain.Exercise;
@@ -60,24 +58,22 @@ import de.tum.in.www1.artemis.domain.participation.Participant;
 import de.tum.in.www1.artemis.domain.participation.StudentParticipation;
 import de.tum.in.www1.artemis.exercise.programming.ProgrammingExerciseFactory;
 import de.tum.in.www1.artemis.exercise.text.TextExerciseFactory;
+import de.tum.in.www1.artemis.lecture.LectureUtilService;
 import de.tum.in.www1.artemis.participation.ParticipationFactory;
 import de.tum.in.www1.artemis.participation.ParticipationUtilService;
 import de.tum.in.www1.artemis.repository.AttachmentUnitRepository;
 import de.tum.in.www1.artemis.repository.CompetencyRelationRepository;
 import de.tum.in.www1.artemis.repository.CompetencyRepository;
-import de.tum.in.www1.artemis.repository.ExerciseRepository;
+import de.tum.in.www1.artemis.repository.CourseCompetencyRepository;
 import de.tum.in.www1.artemis.repository.ExerciseUnitRepository;
 import de.tum.in.www1.artemis.repository.LectureRepository;
 import de.tum.in.www1.artemis.repository.LectureUnitRepository;
 import de.tum.in.www1.artemis.repository.PrerequisiteRepository;
-import de.tum.in.www1.artemis.repository.ResultRepository;
 import de.tum.in.www1.artemis.repository.SubmissionRepository;
 import de.tum.in.www1.artemis.repository.TextUnitRepository;
-import de.tum.in.www1.artemis.repository.UserRepository;
 import de.tum.in.www1.artemis.service.LectureUnitService;
 import de.tum.in.www1.artemis.service.ParticipationService;
 import de.tum.in.www1.artemis.team.TeamUtilService;
-import de.tum.in.www1.artemis.user.UserUtilService;
 import de.tum.in.www1.artemis.util.PageableSearchUtilService;
 import de.tum.in.www1.artemis.web.rest.dto.CourseCompetencyProgressDTO;
 import de.tum.in.www1.artemis.web.rest.dto.SearchResultPageDTO;
@@ -93,22 +89,13 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
     private LectureRepository lectureRepository;
 
     @Autowired
-    private ExerciseRepository exerciseRepository;
-
-    @Autowired
     private ParticipationService participationService;
 
     @Autowired
     private ParticipationUtilService participationUtilService;
 
     @Autowired
-    private UserRepository userRepository;
-
-    @Autowired
     private SubmissionRepository submissionRepository;
-
-    @Autowired
-    private ResultRepository resultRepository;
 
     @Autowired
     private TextUnitRepository textUnitRepository;
@@ -135,12 +122,6 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
     private LectureUnitService lectureUnitService;
 
     @Autowired
-    private UserUtilService userUtilService;
-
-    @Autowired
-    private CourseUtilService courseUtilService;
-
-    @Autowired
     private TeamUtilService teamUtilService;
 
     @Autowired
@@ -163,6 +144,9 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
 
     @Autowired
     private StudentScoreUtilService studentScoreUtilService;
+
+    @Autowired
+    private CourseCompetencyRepository courseCompetencyRepository;
 
     private Course course;
 
@@ -263,7 +247,7 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         return lecture;
     }
 
-    private TextExercise createTextExercise(ZonedDateTime releaseDate, ZonedDateTime dueDate, ZonedDateTime assassmentDueDate, Set<Competency> competencies,
+    private TextExercise createTextExercise(ZonedDateTime releaseDate, ZonedDateTime dueDate, ZonedDateTime assassmentDueDate, Set<CourseCompetency> competencies,
             boolean isTeamExercise) {
         // creating text exercise with Result
         TextExercise textExercise = TextExerciseFactory.generateTextExercise(releaseDate, dueDate, assassmentDueDate, course);
@@ -279,7 +263,7 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         return exerciseRepository.save(textExercise);
     }
 
-    private ProgrammingExercise createProgrammingExercise(int i, Set<Competency> competencies) {
+    private ProgrammingExercise createProgrammingExercise(int i, Set<CourseCompetency> competencies) {
         ProgrammingExercise programmingExercise = ProgrammingExerciseFactory.generateProgrammingExercise(null, null, course);
 
         programmingExercise.setMaxPoints(i * 10.0);
@@ -354,7 +338,11 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
             request.post("/api/courses/" + course.getId() + "/competencies/import-all/1", null, HttpStatus.FORBIDDEN);
             request.post("/api/courses/" + course.getId() + "/competencies/import", competency, HttpStatus.FORBIDDEN);
             // relations
-            request.post("/api/courses/" + course.getId() + "/competencies/relations", new CompetencyRelation(), HttpStatus.FORBIDDEN);
+            CompetencyRelation relation = new CompetencyRelation();
+            relation.setHeadCompetency(competency);
+            relation.setTailCompetency(competency);
+            relation.setType(RelationType.EXTENDS);
+            request.post("/api/courses/" + course.getId() + "/competencies/relations", CompetencyRelationDTO.of(relation), HttpStatus.FORBIDDEN);
             request.getSet("/api/courses/" + course.getId() + "/competencies/relations", HttpStatus.FORBIDDEN, CompetencyRelationDTO.class);
             request.delete("/api/courses/" + course.getId() + "/competencies/relations/1", HttpStatus.FORBIDDEN);
         }
@@ -532,7 +520,8 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
             relationToCreate.setHeadCompetency(headCompetency);
             relationToCreate.setType(RelationType.EXTENDS);
 
-            request.postWithResponseBody("/api/courses/" + course.getId() + "/competencies/relations", relationToCreate, CompetencyRelation.class, HttpStatus.OK);
+            request.postWithResponseBody("/api/courses/" + course.getId() + "/competencies/relations", CompetencyRelationDTO.of(relationToCreate), CompetencyRelation.class,
+                    HttpStatus.OK);
 
             var relations = competencyRelationRepository.findAllWithHeadAndTailByCourseId(course.getId());
             assertThat(relations).hasSize(1);
@@ -568,7 +557,7 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
             // relation type must be set
             relationToCreate.setType(null);
 
-            request.post("/api/courses/" + course.getId() + "/competencies/relations", relationToCreate, HttpStatus.BAD_REQUEST);
+            request.post("/api/courses/" + course.getId() + "/competencies/relations", CompetencyRelationDTO.of(relationToCreate), HttpStatus.BAD_REQUEST);
         }
 
         @Test
@@ -585,7 +574,7 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
             relation.setHeadCompetency(competency);
             relation.setType(RelationType.ASSUMES);
 
-            request.post("/api/courses/" + course.getId() + "/competencies/relations", relation, HttpStatus.BAD_REQUEST);
+            request.post("/api/courses/" + course.getId() + "/competencies/relations", CompetencyRelationDTO.of(relation), HttpStatus.BAD_REQUEST);
         }
     }
 
@@ -644,8 +633,8 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
             User tutor = userRepository.findOneByLogin(TEST_PREFIX + "tutor1").orElseThrow();
             var teams = teamUtilService.addTeamsForExerciseFixedTeamSize(TEST_PREFIX, "lgi", teamTextExercise, 2, tutor, 1);
 
-            createTextExerciseParticipationSubmissionAndResult(teamTextExercise, teams.get(0), 10.0, 0.0, 100, true);  // will be ignored in favor of last submission from team
-            createTextExerciseParticipationSubmissionAndResult(teamTextExercise, teams.get(0), 10.0, 0.0, 50, false);
+            createTextExerciseParticipationSubmissionAndResult(teamTextExercise, teams.getFirst(), 10.0, 0.0, 100, true);  // will be ignored in favor of last submission from team
+            createTextExerciseParticipationSubmissionAndResult(teamTextExercise, teams.getFirst(), 10.0, 0.0, 50, false);
 
             createTextExerciseParticipationSubmissionAndResult(teamTextExercise, teams.get(1), 10.0, 0.0, 10, false);
 
@@ -808,6 +797,7 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
 
             var persistedCompetency = request.postWithResponseBody("/api/courses/" + course.getId() + "/competencies", competency, Competency.class, HttpStatus.CREATED);
             assertThat(persistedCompetency.getId()).isNotNull();
+            verify(competencyProgressService).updateProgressByCompetencyAndUsersInCourseAsync(eq(persistedCompetency));
         }
 
         @Nested
@@ -864,6 +854,21 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
             assertThat(importedCompetency.getExercises()).isEmpty();
             assertThat(importedCompetency.getLectureUnits()).isEmpty();
             assertThat(importedCompetency.getUserProgress()).isEmpty();
+            verify(competencyProgressService, never()).updateProgressByCompetencyAsync(importedCompetency);
+        }
+
+        @Test
+        @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
+        void shouldImportCompetencyWithLectureUnits() throws Exception {
+            List<LectureUnit> allLectureUnits = lectureUnitRepository.findAll();
+            Set<LectureUnit> connectedLectureUnits = new HashSet<>(allLectureUnits);
+            competency.setLectureUnits(connectedLectureUnits);
+            Competency importedCompetency = request.postWithResponseBody("/api/courses/" + course2.getId() + "/competencies/import", competency, Competency.class,
+                    HttpStatus.CREATED);
+
+            assertThat(competencyRepository.findById(importedCompetency.getId())).isNotEmpty();
+            assertThat(importedCompetency.getLectureUnits()).containsExactlyInAnyOrderElementsOf(connectedLectureUnits);
+            verify(competencyProgressService).updateProgressByCompetencyAndUsersInCourseAsync(eq(importedCompetency));
         }
 
         @Test
@@ -967,7 +972,7 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
                     CompetencyWithTailRelationDTO.class, HttpStatus.CREATED);
             assertThat(competencyDTOList).hasSize(2);
             // relations should be empty when not importing them
-            assertThat(competencyDTOList.get(0).tailRelations()).isNull();
+            assertThat(competencyDTOList.getFirst().tailRelations()).isNull();
             assertThat(competencyDTOList.get(1).tailRelations()).isNull();
         }
 
@@ -1042,19 +1047,19 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
             Competency head = createCompetency(course2);
             Competency tail = createCompetency(course2);
             createRelation(tail, head, RelationType.RELATES);
-            var competencyList = List.of(head, tail);
+            List<CourseCompetency> competencyList = List.of(head, tail);
 
             competencyDTOList = request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import/bulk?importRelations=true", competencyList,
                     CompetencyWithTailRelationDTO.class, HttpStatus.CREATED);
 
             assertThat(competencyDTOList).hasSize(2);
             // competency 2 should be the tail of one relation
-            if (competencyDTOList.get(0).tailRelations() != null) {
-                assertThat(competencyDTOList.get(0).tailRelations()).hasSize(1);
+            if (competencyDTOList.getFirst().tailRelations() != null) {
+                assertThat(competencyDTOList.getFirst().tailRelations()).hasSize(1);
                 assertThat(competencyDTOList.get(1).tailRelations()).isNull();
             }
             else {
-                assertThat(competencyDTOList.get(0).tailRelations()).isNull();
+                assertThat(competencyDTOList.getFirst().tailRelations()).isNull();
                 assertThat(competencyDTOList.get(1).tailRelations()).hasSize(1);
             }
 
@@ -1062,7 +1067,7 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
                     CompetencyWithTailRelationDTO.class, HttpStatus.CREATED);
             assertThat(competencyDTOList).hasSize(2);
             // relations should be empty when not importing them
-            assertThat(competencyDTOList.get(0).tailRelations()).isNull();
+            assertThat(competencyDTOList.getFirst().tailRelations()).isNull();
             assertThat(competencyDTOList.get(1).tailRelations()).isNull();
         }
     }
@@ -1103,7 +1108,7 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         @WithMockUser(username = TEST_PREFIX + "editor1", roles = "EDITOR")
         void shouldGetCourseCompetencyTitles() throws Exception {
             competencyUtilService.createCompetencies(course, 5);
-            var competencyTitles = competencyRepository.findAllForCourse(course.getId()).stream().map(CourseCompetency::getTitle).toList();
+            var competencyTitles = courseCompetencyRepository.findAllForCourse(course.getId()).stream().map(CourseCompetency::getTitle).toList();
             prerequisiteUtilService.createPrerequisites(course, 5);
             var prerequisiteTitles = prerequisiteRepository.findAllByCourseIdOrderById(course.getId()).stream().map(CourseCompetency::getTitle).toList();
             var expectedTitles = Stream.concat(competencyTitles.stream(), prerequisiteTitles.stream()).toList();
