@@ -94,7 +94,7 @@ class ExamQuizServiceTest extends AbstractSpringIntegrationIndependentTest {
         exam.setEndDate(ZonedDateTime.now().plusHours(1));
         exam.setWorkingTime(2 * 60 * 60);
         exam.setNumberOfExercisesInExam(1);
-        exerciseGroup = exam.getExerciseGroups().get(0);
+        exerciseGroup = exam.getExerciseGroups().getFirst();
 
         quizExercise = QuizExerciseFactory.createQuizForExam(exerciseGroup);
         exerciseGroup.addExercise(quizExercise);
